--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,7 +34,7 @@ changelog:
 
 release:
   github:
-    owner: grdl
+    owner: vvarga007
     name: pronestheus
 
 dockers:
@@ -47,8 +47,8 @@ dockers:
 
 nfpms:
   - license: MIT
-    maintainer: grdl
-    homepage: https://github.com/grdl/pronestheus
+    maintainer: vvarga007
+    homepage: https://github.com/vvarga007/pronestheus
     bindir: /usr/local/bin
     description: Prometheus exporter for the Nest Learning Thermostat
     formats:
